--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "typecheck": "vitest typecheck",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^18.15.10",
     "eslint": "^8.36.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vitest": "^0.29.7"
   }
 }
