--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,17 @@
     "lib": ["ESNext"], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     "module": "ESNext", /* Specify what module code is generated. */
     "rootDir": "./", /* Specify the root folder within your source files. */
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": [
+      "vitest/globals"
+    ],
     "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
+    "baseUrl": ".", /* Specify the base directory to resolve non-relative module names. */
     "allowImportingTsExtensions": true, /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */
-    "resolvePackageJsonExports": true, /* Use the package.json 'exports' field when resolving package imports. */
-    "resolvePackageJsonImports": true, /* Use the package.json 'imports' field when resolving imports. */
     "resolveJsonModule": true, /* Enable importing .json files. */
     "declaration": true, /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-    "emitDeclarationOnly": true, /* Only output d.ts files and not JavaScript files. */
     "removeComments": true, /* Disable emitting comments. */
     "noEmit": true, /* Disable emitting files from a compilation. */
     "isolatedModules": true, /* Ensure that each file can be safely transpiled without relying on other imports. */
@@ -20,9 +23,6 @@
     "strict": true, /* Enable all strict type-checking options. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"],
-  "files": [
-    "*.d.ts"
-  ],
+  "include": ["src/**/*", "__test__/**/*"],
   "exclude": ["node_modules", "dist"]
 }
